# rust

./: .env  .gitignore  Cargo.toml  Readme.md  task_mgmt.db
migrations/2024-05-25-191140_create_tasks/: up.sql
src/: main.rs  middleware.rs  routes.rs  schema.rs
src/controllers/: mod.rs  task_controller.rs
src/handlers/: mod.rs  task_handler.rs
src/models/: task.rs  user.rs
src/services/: email_service.rs
