[package]
name = "rust_task_api"
authors = ["pdouvch"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jwt-simple = "9.1"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }

[[bin]]
name = "mybinary"
path = "src/main.rs"