[package]
name = "rust_task_api"
authors = ["pdouvch"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.6"
diesel = { version = "2.0", features = ["postgres"] }
dotenv = "0.15"
jsonwebtoken = "8.2"
bcrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.10"
twilio = "0.7"
web-push = "0.8"
uuid = "1.1"
chrono = "0.4"


[[bin]]
name = "mybinary"
path = "src/main.rs"